--- a/src/CheeseMVC/Views/Category/Add.cshtml
+++ b/src/CheeseMVC/Views/Category/Add.cshtml
@@ -6,7 +6,7 @@
 
     <div class="form-group">
         <label asp-for="Name"></label>
-        <label class="from-control" asp-for="Name"/>
+        <input class="from-control" asp-for="Name"/>
         <span asp-validation-for="Name"></span>
     </div>
 
