--- a/src/CheeseMVC/Views/Cheese/Index.cshtml
+++ b/src/CheeseMVC/Views/Cheese/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<CheeseMVC.Models.Cheese>
+﻿@model IList<CheeseMVC.Models.Cheese>
 
 <h1>@ViewBag.Title</h1>
 
@@ -7,7 +7,7 @@
     <tr>
         <th>Name</th>
         <th>Description</th>
-        <td>Category</td>
+        <th>Category</th>
     </tr>
 
     @foreach (var cheese in Model)
@@ -20,9 +20,10 @@
     }
 </table>
 
+<a asp-controller="Cheese" asp-action="Add">Add</a> | <a asp-controller="Cheese" asp-action="Remove">Remove</a>
+
+
 @if (Model.Count == 0)
 {
     <p>No cheeses yet!</p>
 }
-
-<p><a asp-controller="Cheese" asp-action="Add">Add Cheese</a></p>
