--- a/src/CheeseMVC/Views/Menu/Add.cshtml
+++ b/src/CheeseMVC/Views/Menu/Add.cshtml
@@ -4,11 +4,11 @@
     ViewBag.Title = "New Menu";
 }
 
-<h1> Add Category</h1>
+<h1> Add Menu</h1>
 
 <form asp-controller="Menu" asp-action="Add" method="post">
     <div class="form-group">
-        <label asp-for="Name"></label>
+        <input asp-for="Name"></input>
         <span asp-validation-for="Name"></span>
     </div>
     <input type="submit" value="Add Menu" />
