--- a/src/CheeseMVC/Views/Menu/AddItem.cshtml
+++ b/src/CheeseMVC/Views/Menu/AddItem.cshtml
@@ -7,9 +7,9 @@
 <form asp-controller="Menu" asp-action="AddItem" method="post">
 
     <div class="form-group">
-        <label asp-for="cheeseID"></label>
-        <select asp-for="cheeseID" asp-items="Model.Cheeses"></select>
-        <span asp-validation-for="cheeseID"></span>
+        <label asp-for="CheeseID"></label>
+        <select asp-for="CheeseID" asp-items="Model.Cheeses"></select>
+        <span asp-validation-for="CheeseID"></span>
     </div>
     <input type="hidden" name="MenuID" value="@Model.Menu.ID" />
 
