--- a/src/CheeseMVC/Views/Menu/Index.cshtml
+++ b/src/CheeseMVC/Views/Menu/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CheeseMVC.Models.Menu>
+﻿@model IList<CheeseMVC.Models.Menu>
 
 <h1>@ViewBag.Title</h1>
 
@@ -11,5 +11,8 @@
 
     }
 </ul>
-
-<p><a asp-controller="Menu" asp-action="Add" Menu</a></p>
+@if (Model.Count == 0)
+{
+    <p><i>No menu items</i></p>
+}
+<p> <a asp-controller="Menu" asp-action="Add"> Add Menu </a></p>
